fixed overflow on header

--- a/src/index.less
+++ b/src/index.less
@@ -18,7 +18,7 @@
 body {
 	background: @white;
 }
-body, header, main, footer {
+body, main, footer {
 	width: 100%;
 	overflow-x: hidden;
 }
